# gtk-print

./: .clang-format  .clang-tidy  .gitignore  LICENSE.txt  README.md  meson.build  meson_options.txt
emacs/gtk-print/: gtk-print-ox.el  gtk-print.el
include/: i18n.h  print.h  prompt_password.h
po/: POTFILES  de.po  gtk-print.pot  meson.build
src/: main.c  print.c  prompt_password.c
